--- a/1st_homework/about.css
+++ b/1st_homework/about.css
@@ -1,10 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Kalam:wght@400;700&family=Pacifico&family=Shadows+Into+Light&family=Sriracha&display=swap');
 
+@font-face {
+    font-family: 'Cafe24Oneprettynight';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+/* @font-face {
+    font-family: 'Cafe24Oneprettynight';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff');
+    font-family: 'JSDongkang-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/JSDongkang-RegularA1.woff') format('woff');
+    font-family: 'InfinitySans-RegularA1';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-RegularA1.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+} */
 * {
     margin: 0;
     padding: 0;
     list-style: none;
     box-sizing: border-box;
+    
 
 }
 
@@ -18,6 +35,14 @@
     flex-direction: column;
 }
 
+.about-subject {
+    position: absolute;
+    top: 200px;
+     /* font-family: 'Kalam', cursive; */
+    /* font-family: 'Shadows Into Light', cursive; */
+    font-family: 'Sriracha', cursive;
+    font-weight: lighter;
+}
 .nav-bar {
     height: 140px;
     width: 100%;
@@ -95,6 +120,8 @@ h1 {
     font-size: 3rem;
     font-family: 'Shadows Into Light', cursive;
     /* font-style: italic; */
+    text-decoration: none;
+    color: black;
 }
 
 .list {
@@ -111,6 +138,7 @@ li {
     padding-left: 40px;
     font-size: 1.2rem;
 
+
 }
 
 .footer {
@@ -123,9 +151,12 @@ li {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+
+
+    /* position: fixed; */
+    /* bottom: 0; */
+    /* left: 0; */
+    /* margin-top: 10px; */
 }
 
 .footer-logo {
@@ -212,13 +243,13 @@ li {
     width: 100%;
     /* height: 50%; */
 
-    margin-top: 300px;
+    margin-top: 350px;
     justify-content: center;
     align-items: center;
 }
 
 .profile-img>img {
-    height: 300px;
+    height: 310px;
     width: 250px;
     object-fit: cover;
     z-index: 2;
@@ -226,6 +257,8 @@ li {
 
 .intro-text {
     text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .profile-info {
@@ -234,6 +267,8 @@ li {
     justify-content: center;
     height: 150px;
     width: 100%;
+    font-family: 'Cafe24Oneprettynight';
+    
 }
 
 .sub-info {
@@ -247,26 +282,30 @@ li {
 }
 
 .sub-info a {
-    background-color: rgba(255, 224, 130, 0.6);
+    /* background-color: rgba(255, 224, 130, 0.6); */
+    background-color: rgba(84, 74, 125, 1);
     height: 144px;
     width: 144px;
     border-radius: 72px;
     box-shadow: 0 4px 16px 0 rgba(0, 0, 0, .07);
     cursor: pointer;
+    font-family: 'Sriracha', cursive;
 
 }
 
 .sub-info p {
     text-align: center;
     line-height: 144px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: bold;
     /* color: #805acb; */
-    color: #544a7d;
+    /* color: #544a7d; */
+    color: ivory;
+    font-size: 1.2rem;
 }
 
 .sub-info-contents {
-    height: 1500px;
+    height: 1800px;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -275,16 +314,16 @@ li {
 }
 
 .like {
-    height: 100%;
+    height:900px;
     width: 100%;
-    /* border: 1px black solid; */
-
+    border: 1px black solid;
 }
 
 .like>p {
     font-size: 2rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     height: 80px;
+    font-family: 'Sriracha', cursive;
 }
 
 .like img {
@@ -344,6 +383,40 @@ li {
     background-position: center;
 }
 
+/* Bounce In */
+.hvr-bounce-in {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+  }
+  .hvr-bounce-in:hover, .hvr-bounce-in:focus, .hvr-bounce-in:active {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  }
+  
+  /* Bounce Out */
+  .hvr-bounce-out {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+  }
+  .hvr-bounce-out:hover, .hvr-bounce-out:focus, .hvr-bounce-out:active {
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+    transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  }
+
 .item {
     /* background-image: url(./images/text-bubble.png); */
     background-size: 100% 100%;
@@ -388,41 +461,98 @@ li {
 }
 
 .interest {
-    height: 500px;
+    height: 700px;
     width: 100%;
+    /* font-family: 'InfinitySans-RegularA1'; */
     border: 1px dotted red;
+    background-image: url(./images/healthy.png);
+    background-repeat: no-repeat;
 }
 
 .interest>p {
     font-size: 2rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     height: 80px;
+    font-family: 'Sriracha', cursive;
+    /* font-family: 'Cafe24Oneprettynight'; */
+    /* font-family: 'JSDongkang-Regular'; */
+
+
+}
+
+
+.interest-content p {
+    font-size: 1.2rem;
+     font-family: 'Cafe24Oneprettynight';
+     padding-top: 9px;
+    /* font-family: 'JSDongkang-Regular'; */
 }
 
 .chracter {
-    height: 500px;
+    height: 900px;
     width: 100%;
-    border: 1px dotted red;
+    /* border: 1px dotted red; */
+    margin-bottom: 5px;
+    /* font-family: 'InfinitySans-RegularA1'; */
+    font-family: 'Cafe24Oneprettynight';
+    /* display: flex; */
+    background-image: url(./images/me.png);
+    background-repeat: no-repeat;
+    background-position: right;
+
 }
 
 .chracter>p {
     font-size: 2rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     height: 80px;
+    font-family: 'Sriracha', cursive;
+}
+.chracter-info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    height: 500px;
+    width: 75%;
+    /* position: absolute; */
 }
 
+
+.mytype p {
+    padding-top:9px;
+    font-size: 1.2rem;
+}
+.matching-test {
+    height: 200px;
+    padding-top: 60px;
+    font-size: 1.2rem;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
+    
+}
+.matching-test p {
+   padding-bottom: 30px;
+
+}
+.matching-test .btn {
+    background-color: rgba(12, 198, 221, 1);
+}
 .btn {
-    background-color: #3498DB;
-    height: 40px;
-    border-radius: 20px;
-    line-height: 36px;
+    background-color: #544a7d;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    line-height: 120px;
     text-align: center;
     color: #fff;
     text-transform: uppercase;
     font-size: 0.875em;
     border: none;
     font-weight: 700;
-    padding: 0 34px;
+    /* padding: 0 50px; */
     margin: 0 auto;
     cursor: pointer;
 }
@@ -495,7 +625,8 @@ select {
     height: 35px;
     width: 100%;
     border-radius: 5px;
-    border-style: none;
+    border-color: lightgrey;
+    
 }
 
 /* modal-result */
