--- a/1st_homework/about.css
+++ b/1st_homework/about.css
@@ -775,3 +775,28 @@ select {
     visibility: visible;
     opacity: 1;
 }
+
+.miffy{
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-image: url('./images/miffy.png');
+    background-size: contain;
+    background-position: center;
+
+    background-repeat: no-repeat;
+
+    z-index: -1;
+
+    transition: 2s;
+    transform: translateY(-20px);
+}
+
+#miffy:hover .miffy{
+    transform: translateY(-70px);
+}
