--- a/1st_homework/style.css
+++ b/1st_homework/style.css
@@ -7,20 +7,20 @@
     box-sizing: border-box;
     
 }
-/* 
-body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-} */
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
 
 .container {
     position: relative;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
+
+    overflow: hidden;
 }
 .top {
     height: 35%;
@@ -38,12 +38,31 @@ h1 {
 }
 .bottom {
     height: 65%;
-    width: auto;
+    width: 100%;
     background-color: #00251a;
     opacity: 65%;
     letter-spacing: 3px;
     z-index: 2;
+
+    position: absolute;
+    bottom: 0px;
+    transition: all .6s linear;
+    
+
+
+
 }
+
+.bottom-invisiable {
+    transform: translateY(1000px);
+}
+
+.bottom-visiable {
+    transform: translateY(0px);
+    /* transition-timing-function: linear; */
+}
+
+
 
 .list {
     width: auto;
