--- a/1st_homework/style.css
+++ b/1st_homework/style.css
@@ -46,10 +46,7 @@ h1 {
 
     position: absolute;
     bottom: 0px;
-    transition: all .6s linear;
-    
-
-
+    transition: all 1s linear;
 
 }
 
@@ -59,7 +56,6 @@ h1 {
 
 .bottom-visiable {
     transform: translateY(0px);
-    /* transition-timing-function: linear; */
 }
 
 
